# Tim-Maju-Lancar-Datathon-Jatim-2025

./: KerangkaAnalisis.ipynb  LICENSE  README.md  dataslbjatim.ipynb  main.py  pyproject.toml  standarQualityColab.ipynb
data/: test.json
data/dapo-kemdikdasmen/2023-1/Prov. Aceh/ALL/: Prov. Aceh-csv.csv  Prov. Aceh-excel.xlsx
data/dapo-kemdikdasmen/2023-1/Prov. Bali/ALL/: Prov. Bali-csv.csv  Prov. Bali-excel.xlsx
data/dapo-kemdikdasmen/2023-1/Prov. Banten/ALL/: Prov. Banten-csv.csv  Prov. Banten-excel.xlsx
data/dapo-kemdikdasmen/2025-1/ALL/: indonesia-slb-excel.xlsx
data/dapo-kemdikdasmen/ALL/: indonesia-slb-csv.csv  indonesia-slb-excel.xlsx
data/dapo-kemdikdasmen/Jawa-Timur/ALL/: jatim-csv.csv  jatim-excel.xlsx
data/dapo-kemdikdasmen/Prov. Jawa Timur/ALL/: jatim-csv.csv  jatim-excel.xlsx
data/dapo-kemdikdasmen/metadata/provinsi/: df_0.csv  df_1.csv  df_10.csv  df_11.csv  df_12.csv  df_13.csv  df_14.csv  df_15.csv  df_16.csv  df_17.csv  df_18.csv  df_19.csv  df_2.csv  df_20.csv  df_21.csv  df_22.csv  df_23.csv  df_24.csv  df_25.csv  df_26.csv  df_27.csv  df_28.csv  df_29.csv  df_3.csv  df_30.csv  df_31.csv  df_32.csv  df_33.csv  df_34.csv  df_35.csv  df_4.csv  df_5.csv  df_6.csv  df_7.csv  df_8.csv  df_9.csv
notebooks/: analytical-framework.ipynb  dataset-converter.ipynb  dataslbjatim.ipynb  final-analysis.ipynb  notebook.ipynb  ranking_top10_negeri_swasta.xlsx  scraping.ipynb  slb-overview.ipynb  standarQuality.ipynb  standarQualityColab.ipynb  standardQualityColab.ipynb
outputs/: data-jatim-group-by-semester-id.csv
(+20776 files in other folders)
