[project]
name = "datathon-jatim-2025"
version = "0.1.0"
description = "A data analysis project for the East Java Datathon 2025, organized by the Ministry of Communication and Digital Affairs of East Java."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "lxml>=6.0.1",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
